fix: reduce glossary table font size and left-align description column

--- a/research/wq-alpha-evolution/index.html
+++ b/research/wq-alpha-evolution/index.html
@@ -101,6 +101,8 @@ title: "WQ BRAIN Alpha Evolution"
         tbody tr:nth-child(even){background:#fafafa}
         tbody tr:hover{background:#f0f4ff}
         td.left{text-align:left}
+        .glossary-table td:first-child{text-align:left;font-weight:600;white-space:nowrap;font-size:11px;width:180px}
+        .glossary-table td:last-child{text-align:left;font-size:11px;line-height:1.6}
         .sig{color:#e63946;font-weight:700}
         .note{font-size:11.5px;color:#777;margin-top:5px;font-style:italic}
         pre{background:#0f172a;color:#e2e8f0;padding:20px 22px;border-radius:8px;overflow-x:auto;font-family:'Space Mono',monospace;font-size:12px;line-height:1.65;margin:18px 0}
@@ -1574,7 +1576,7 @@ save_final()                           <span class="cm"># pattern_learner/surrog
 
 <p>본 시스템의 실행 로그에 출현하는 주요 용어와 그 의미를 정리한다. 유전 프로그래밍 및 BRAIN 플랫폼 고유 용어를 포함한다.</p>
 
-<table>
+<table class="glossary-table">
 <thead>
 <tr><th>용어</th><th>의미</th></tr>
 </thead>
