--- a/research/wq-alpha-evolution/index.html
+++ b/research/wq-alpha-evolution/index.html
@@ -297,7 +297,7 @@ Figure 1: 전체 시스템 상세 구조도 (Full System Architecture Diagram)
 <tr><td class="left"><code>main.py</code></td><td class="left">CLI 진입점, 루프 제어, 에러 복구</td><td>~200</td></tr>
 <tr><td class="left"><code>evolution.py</code></td><td class="left">진화 엔진 v4 — 6개 핵심 클래스, 30+ 메서드</td><td>1,960+</td></tr>
 <tr><td class="left"><code>brain_api.py</code></td><td class="left">BRAIN API 래퍼, ACE 라이브러리 통합, 배치 시뮬</td><td>~300</td></tr>
-<tr><td class="left"><code>alpha_ast.py</code></td><td class="left">AST 노드, 10개 유전 연산자, 멀티라인 생성</td><td>~700</td></tr>
+<tr><td class="left"><code>alpha_ast.py</code></td><td class="left">AST 노드, 10개 유전 연산자, 멀티라인 생성, 64-op 제한 검증</td><td>~780</td></tr>
 <tr><td class="left"><code>strategies.py</code></td><td class="left">36개 시드 전략, 리전/delay 특화</td><td>~500</td></tr>
 <tr><td class="left"><code>evaluator.py</code></td><td class="left">IQC 점수 계산, IS Check, MDL 페널티</td><td>~150</td></tr>
 <tr><td class="left"><code>config.py</code></td><td class="left">7라운드 설정, 11개 탐색 공간, 기준값</td><td>~200</td></tr>
@@ -556,7 +556,11 @@ Figure 1: 전체 시스템 상세 구조도 (Full System Architecture Diagram)
 </tbody>
 </table>
 
-<p><code>to_expr()</code>는 FastExpression 형식(단일 줄), <code>to_regular()</code>는 Regular Expression 형식(멀티라인)을 출력한다. BRAIN Regular Expression 제약 조건: (1) 변수명은 단일 문자(a, b, c...), (2) 할당 후 세미콜론 필수, (3) 정의된 모든 변수는 반드시 사용, (4) 과학적 표기법 불가(<code>1e-6</code> → <code>0.000001</code>).</p>
+<p><code>to_expr()</code>는 FastExpression 형식(단일 줄), <code>to_regular()</code>는 Regular Expression 형식(멀티라인)을 출력한다. BRAIN Regular Expression 제약 조건: (1) 변수명은 단일 문자(a, b, c...), (2) 할당 후 세미콜론 필수, (3) 정의된 모든 변수는 반드시 사용, (4) 과학적 표기법 불가(<code>1e-6</code> → <code>0.000001</code>), (5) 연산자 수 64개 이하.</p>
+
+<p>BRAIN 플랫폼은 단일 수식당 최대 64개 연산자를 허용한다. <code>operator_count()</code> 메서드는 AST에서 leaf 노드(field, number)를 제외한 모든 연산 노드(함수 호출, 이항 연산자, 삼항 연산자 등)를 재귀적으로 카운트한다. 64개를 초과하면 <code>simplify()</code>가 가장 깊은 서브트리를 leaf 노드로 교체하여 연산자 수를 줄인다. 이중 안전장치로 최종 expression 문자열에서도 정규식 기반 연산자 카운트를 수행하며, 그래도 초과하면 depth=2의 단순 트리로 대체한다.</p>
+
+<p><code>_validate_regular()</code>는 멀티라인 수식의 구문 유효성을 10가지 항목으로 검증한다: (1) 빈 줄, (2) 할당 줄 세미콜론, (3) 할당 형식, (4) 괄호 밸런스, (5) 빈 인자 함수 호출, (6) 미정의 변수 참조, (7) 미사용 정의 변수, (8) trailing/leading 연산자, (9) 연속 이항 연산자, (10) 불완전 삼항 연산자. 검증 실패 시 <code>to_expr()</code> 단일 줄 형식으로 자동 폴백한다.</p>
 
 <p>멀티라인 알파의 최종 결합 수식은 가중합, 조건부(중첩 삼항), 교차항(곱셈+덧셈) 3가지 방식 중 랜덤 선택된다. 각 변수는 9개 시그널 카테고리(모멘텀/반전, 밸류, 유동성, 애널리스트, 베타/상관, 뉴스 센티먼트, 공매도, 옵션, 비율)에서 라운드 로빈으로 할당되어 멀티팩터 다양성을 확보한다.</p>
 
@@ -605,7 +609,7 @@ Figure 1: 전체 시스템 상세 구조도 (Full System Architecture Diagram)
 <!-- 7. Stagnation Escape -->
 <h2>7. 정체 탈출 메커니즘</h2>
 
-<p>유전 알고리즘은 본질적으로 지역 최적해(local optimum)에 수렴하는 경향이 있다. 특히 BRAIN 알파 탐색에서는 특정 수식 패턴(예: <code>(close - low)/(high - low)</code> 계열)이 Sharpe 1.0~1.5 구간에서 정체되는 현상이 빈번하다. 이를 탈출하기 위해 3단계 정체 탈출 메커니즘을 운용한다.</p>
+<p>유전 알고리즘은 본질적으로 지역 최적해(local optimum)에 수렴하는 경향이 있다. 특히 BRAIN 알파 탐색에서는 특정 수식 패턴(예: <code>(close - low)/(high - low)</code> 계열)이 Sharpe 1.0~1.5 구간에서 정체되는 현상이 빈번하다. 이를 탈출하기 위해 5단계 정체 탈출 메커니즘을 운용한다.</p>
 
 <h3>7.1 정체 감지</h3>
 
@@ -630,6 +634,24 @@ Figure 1: 전체 시스템 상세 구조도 (Full System Architecture Diagram)
 <h3>7.4 실전 동작 예시</h3>
 
 <p>실제 실행에서 관찰된 전형적인 정체-탈출 패턴은 다음과 같다. R1 세대 3~4에서 4개 섬 모두 Score 1.30 근처에 수렴하면, 섬0과 섬1에서 대격변이 발동된다. 대격변 후 MAP-Elites 시드에서 주입된 이질적 개체(예: 밸류 팩터 기반 수식)가 기존 모멘텀 계열 수식과 교배되어 새로운 복합 시그널이 생성된다. 이 과정에서 Score 1.3을 돌파하는 개체가 출현할 수 있다.</p>
+
+<h3>7.5 다양성 강제 주입</h3>
+
+<p>대격변과 이주만으로는 해결되지 않는 구조적 다양성 문제가 존재한다. 교배율이 높은 라운드(R3: crossover_rate=0.7)에서 부모 풀의 필드 구성이 유사하면, 교배 결과도 동일한 필드 조합의 변형에 불과하다. 예를 들어 <code>rank(cashflow_op/vwap)</code> 계열 수식끼리 교배하면 <code>rank(cashflow_op/close)</code> 같은 미미한 변형만 생성되어 BRAIN의 Self-Correlation 검사에 걸린다.</p>
+
+<p>이를 해결하기 위해 매 세대 offspring의 15%를 희귀 필드 그룹에서 생성한 랜덤 트리로 강제 교체한다. 구체적으로, 현재 population에서 30% 이상의 개체가 사용하는 필드를 "과다 사용 필드"로 분류하고, 이와 겹침이 적은 필드 그룹(fundamental, analyst, sentiment, option, institution 등)을 선별한다. 해당 그룹에서 생성된 트리는 IQC 점수가 0인 non-elite 개체를 교체한다.</p>
+
+<h3>7.6 Self-Correlation 사전 필터</h3>
+
+<p>BRAIN API의 Self-Correlation 검사는 시뮬레이션 완료 후에야 결과가 반환되므로, 유사한 수식을 반복 제출하면 API 호출이 낭비된다. 이를 방지하기 위해 <code>_evaluate_population()</code> 단계에서 필드 시그니처 기반 사전 필터를 적용한다.</p>
+
+<p>각 수식의 필드 집합을 추출하여 명예의 전당 및 제출 완료 알파의 필드 집합과 Jaccard 유사도를 계산한다:</p>
+
+<div class="math-block">
+\[J(A, B) = \frac{|A \cap B|}{|A \cup B|}\]
+</div>
+
+<p>Jaccard 유사도가 0.85를 초과하면 해당 수식은 API 호출 없이 스킵된다. 이 필터는 Surrogate 필터 이전에 적용되어, 구조적으로 중복된 수식이 Surrogate 모델의 학습 데이터를 오염시키는 것도 방지한다.</p>
 
 <div class="section-divider">• • •</div>
 
@@ -1027,6 +1049,9 @@ save_final()                           <span class="cm"># pattern_learner/surrog
 <tr><td>HIGH_TURNOVER</td><td>일일 포지션 변동이 과도하여 거래 비용 대비 수익이 불충분한 경우.</td></tr>
 <tr><td>LOW_SUB_UNIVERSE_SHARPE</td><td>하위 유니버스(시가총액 구간)에서 성과가 일관되지 않는 경우.</td></tr>
 <tr><td>PROD_CORRELATION</td><td>프로덕션 환경의 기존 알파 포트폴리오와 상관이 높은 경우.</td></tr>
+<tr><td>연산자 제한(64-op limit)</td><td>BRAIN 플랫폼이 단일 수식에 허용하는 최대 연산자 수. 초과 시 시뮬레이션이 거부된다.</td></tr>
+<tr><td>다양성 강제 주입</td><td>매 세대 offspring의 15%를 희귀 필드 그룹에서 생성한 랜덤 트리로 교체하여 필드 다양성을 확보하는 메커니즘.</td></tr>
+<tr><td>Self-Corr 사전 필터</td><td>필드 Jaccard 유사도 기반으로 기존 알파와 구조적으로 유사한 수식을 API 호출 전에 스킵하는 필터.</td></tr>
 <tr><td>Trivial Alpha</td><td><code>sign(cap)</code> 등 자명한 수식. 비현실적으로 높은 Sharpe(6+)를 보이나 IS Check에서 반드시 탈락한다.</td></tr>
 <tr><td>SA 온도(Temperature)</td><td>Simulated Annealing 온도. 높을수록 열악한 자식도 수용하여 탐색 범위를 확대한다. 세대 진행에 따라 냉각.</td></tr>
 <tr><td>AOS(Adaptive Operator Selection)</td><td>UCB1 알고리즘으로 10개 유전 연산자의 선택 확률을 성과 기반으로 동적 조정.</td></tr>
